--- a/src/app/v2/components/footer/footer.component.html
+++ b/src/app/v2/components/footer/footer.component.html
@@ -81,7 +81,7 @@
   style="background-image: url('assets/images/industry4.webp')"
 >
   <!-- Overlay oscuro -->
-  <div class="absolute inset-0 bg-black bg-opacity-60"></div>
+  <div class="absolute inset-0 bg-black bg-opacity-70"></div>
   <div class="container mx-auto px-6 relative z-10 text-white">
     <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
       <!-- Columna 1: Descripción -->
@@ -129,7 +129,7 @@
         <a
           href="#"
           routerLink="/evaluaciones-madurez"
-          class="bg-blue-500 text-white px-6 py-2 rounded-lg hover:bg-blue-600 transition duration-300"
+          class="bg-yellow-500 text-white px-6 py-2 rounded-lg hover:bg-yellow-600 transition duration-300"
           >Evaluar Ahora</a
         >
       </div>
