--- a/src/app/v2/components/navbar/navbar.component.html
+++ b/src/app/v2/components/navbar/navbar.component.html
@@ -1,8 +1,12 @@
-<header class="bg-gray-800 text-white shadow-lg">
+<header
+  class="text-white shadow-lg"
+  [ngStyle]="{ 'background-color': background }"
+>
   <div class="container mx-auto flex items-center px-4">
     <!-- Logo principal, clickea para ir al inicio -->
     <a
       routerLink="/"
+      [ngStyle]="{ 'z-index': zindex === 'true' ? 1 : 0 }"
       class="font-black text-2l tracking-wider bg-yellow-500 text-gray-800 p-5"
       (click)="closeMobileMenu()"
     >
@@ -13,6 +17,7 @@
     <button
       class="block lg:hidden focus:outline-none ml-auto p-4"
       (click)="toggleMobileMenu()"
+      [ngStyle]="{ 'z-index': zindex === 'true' ? 1 : 0 }"
       aria-label="Toggle navigation menu"
     >
       <svg
@@ -55,7 +60,8 @@
             </svg>
           </button>
           <div
-            class="absolute left-0 top-full w-48 bg-gray-800 text-white rounded-md shadow-lg opacity-0 invisible group-hover:opacity-100 group-hover:visible transition-opacity duration-300 z-10"
+            [ngStyle]="{ 'background-color': background }"
+            class="absolute left-0 top-full w-48 text-white rounded-md shadow-lg opacity-0 invisible group-hover:opacity-100 group-hover:visible transition-opacity duration-300 z-10"
           >
             <ng-container *ngFor="let item of menu.items">
               <a
@@ -92,7 +98,8 @@
             </svg>
           </button>
           <div
-            class="absolute left-0 top-full w-48 bg-gray-800 text-white rounded-md shadow-lg opacity-0 invisible group-hover:opacity-100 group-hover:visible transition-opacity duration-300 z-10"
+            [ngStyle]="{ 'background-color': background }"
+            class="absolute left-0 top-full w-48 text-white rounded-md shadow-lg opacity-0 invisible group-hover:opacity-100 group-hover:visible transition-opacity duration-300 z-10"
           >
             <!-- Opciones si no está logueado -->
             <a
@@ -124,6 +131,7 @@
       <a
         *ngIf="isLoggedOut"
         routerLink="/registro"
+        [ngStyle]="{ 'z-index': zindex === 'true' ? 1 : 0 }"
         class="hidden md:inline-block bg-yellow-500 text-gray-800 font-bold py-3 px-4 ml-4 border border-yellow-700"
       >
         Registrarse
@@ -136,14 +144,14 @@
     class="lg:hidden"
     [ngClass]="{ block: isMobileMenuOpen, hidden: !isMobileMenuOpen }"
   >
-    <nav class="px-2 pt-2 pb-4 space-y-1 sm:px-3">
+    <nav style="position: sticky" class="px-2 pt-2 pb-4 space-y-1 sm:px-3">
       <ng-container *ngFor="let menu of mainMenus">
         <div>
           <!-- Botón para desplegar/ocultar submenú en móvil -->
           <button
             class="w-full text-left px-3 py-2 rounded-md text-gray-300 hover:bg-gray-700 hover:text-white transition-colors duration-300 flex items-center justify-between"
             (click)="
-              menu.isDropdown ? $event.stopPropagation() : onMenuItemClick(menu)
+              menu.isDropdown ? toggleSubmenu(menu) : onMenuItemClick(menu)
             "
           >
             {{ menu.label }}
