--- a/src/app/v2/modules/landing-page3/landing-page3.component.html
+++ b/src/app/v2/modules/landing-page3/landing-page3.component.html
@@ -61,6 +61,7 @@
         </p>
         <a
           routerLink="/investigacion-podcasts"
+          href="/investigacion-podcasts"
           class="bg-gray-800 text-white py-3 px-6 rounded-lg shadow-lg hover:shadow-xl transition duration-200"
           >Ir a Escuchar
         </a>
