--- a/src/app/v2/modules/landing-page3/landing-page3.component.html
+++ b/src/app/v2/modules/landing-page3/landing-page3.component.html
@@ -13,7 +13,7 @@
   </svg>
 </div>
 <!-- Contenido dinámico del sitio -->
-<section>
+<section data-aos="fade-up">
   <app-title-section
     [title]="titleSection.title"
     [description]="titleSection.description"
@@ -25,88 +25,91 @@
   </app-title-section>
 </section>
 
-<div class="custom-shape-divider-bottom-1736997902">
-  <svg
-    data-name="Layer 1"
-    xmlns="http://www.w3.org/2000/svg"
-    viewBox="0 0 1200 120"
-    preserveAspectRatio="none"
-  >
-    <path
-      d="M0,0V46.29c47.79,22.2,103.59,32.17,158,28,70.36-5.37,136.33-33.31,206.8-37.5C438.64,32.43,512.34,53.67,583,72.05c69.27,18,138.3,24.88,209.4,13.08,36.15-6,69.85-17.84,104.45-29.34C989.49,25,1113-14.29,1200,52.47V0Z"
-      opacity=".25"
-      class="shape-fill"
-    ></path>
-    <path
-      d="M0,0V15.81C13,36.92,27.64,56.86,47.69,72.05,99.41,111.27,165,111,224.58,91.58c31.15-10.15,60.09-26.07,89.67-39.8,40.92-19,84.73-46,130.83-49.67,36.26-2.85,70.9,9.42,98.6,31.56,31.77,25.39,62.32,62,103.63,73,40.44,10.79,81.35-6.69,119.13-24.28s75.16-39,116.92-43.05c59.73-5.85,113.28,22.88,168.9,38.84,30.2,8.66,59,6.17,87.09-7.5,22.43-10.89,48-26.93,60.65-49.24V0Z"
-      opacity=".5"
-      class="shape-fill"
-    ></path>
-    <path
-      d="M0,0V5.63C149.93,59,314.09,71.32,475.83,42.57c43-7.64,84.23-20.12,127.61-26.46,59-8.63,112.48,12.24,165.56,35.4C827.93,77.22,886,95.24,951.2,90c86.53-7,172.46-45.71,248.8-84.81V0Z"
-      class="shape-fill"
-    ></path>
-  </svg>
-</div>
-<!-- Section podcasts-->
-<section class="bg-yellow-500 py-10">
-  <div class="max-w-6xl mx-auto px-4 sm:px-6 lg:px-8">
-    <div class="flex flex-col gap-12 lg:flex-row items-center">
-      <div class="lg:w-1/2">
-        <h1 class="text-3xl font-bold leading-tight mb-4">
-          Escucha nuestros Podcast
-        </h1>
-        <p class="text-xl mb-8">
-          Podcast creados con IA, acerca de la industria 4.0 y sus tecnologías.
-        </p>
-        <a
-          routerLink="/investigacion-podcasts"
-          href="/investigacion-podcasts"
-          class="bg-gray-800 text-white py-3 px-6 rounded-lg shadow-lg hover:shadow-xl transition duration-200"
-          >Ir a Escuchar
-        </a>
-      </div>
-      <div class="lg:w-1/4 lg:flex lg:justify-end hidden">
-        <img
-          src="assets/podcast.webp"
-          alt="Podcast"
-          width="auto"
-          height="auto"
-          loading="eager"
-        />
+<div data-aos="fade-right">
+  <div class="custom-shape-divider-bottom-1736997902">
+    <svg
+      data-name="Layer 1"
+      xmlns="http://www.w3.org/2000/svg"
+      viewBox="0 0 1200 120"
+      preserveAspectRatio="none"
+    >
+      <path
+        d="M0,0V46.29c47.79,22.2,103.59,32.17,158,28,70.36-5.37,136.33-33.31,206.8-37.5C438.64,32.43,512.34,53.67,583,72.05c69.27,18,138.3,24.88,209.4,13.08,36.15-6,69.85-17.84,104.45-29.34C989.49,25,1113-14.29,1200,52.47V0Z"
+        opacity=".25"
+        class="shape-fill"
+      ></path>
+      <path
+        d="M0,0V15.81C13,36.92,27.64,56.86,47.69,72.05,99.41,111.27,165,111,224.58,91.58c31.15-10.15,60.09-26.07,89.67-39.8,40.92-19,84.73-46,130.83-49.67,36.26-2.85,70.9,9.42,98.6,31.56,31.77,25.39,62.32,62,103.63,73,40.44,10.79,81.35-6.69,119.13-24.28s75.16-39,116.92-43.05c59.73-5.85,113.28,22.88,168.9,38.84,30.2,8.66,59,6.17,87.09-7.5,22.43-10.89,48-26.93,60.65-49.24V0Z"
+        opacity=".5"
+        class="shape-fill"
+      ></path>
+      <path
+        d="M0,0V5.63C149.93,59,314.09,71.32,475.83,42.57c43-7.64,84.23-20.12,127.61-26.46,59-8.63,112.48,12.24,165.56,35.4C827.93,77.22,886,95.24,951.2,90c86.53-7,172.46-45.71,248.8-84.81V0Z"
+        class="shape-fill"
+      ></path>
+    </svg>
+  </div>
+  <!-- Section podcasts-->
+  <section class="bg-yellow-500 py-10">
+    <div class="max-w-6xl mx-auto px-4 sm:px-6 lg:px-8">
+      <div class="flex flex-col gap-12 lg:flex-row items-center">
+        <div class="lg:w-1/2">
+          <h1 class="text-3xl font-bold leading-tight mb-4">
+            Escucha nuestros Podcast
+          </h1>
+          <p class="text-xl mb-8">
+            Podcast creados con IA, acerca de la industria 4.0 y sus
+            tecnologías.
+          </p>
+          <a
+            routerLink="/investigacion-podcasts"
+            href="/investigacion-podcasts"
+            class="bg-gray-800 text-white py-3 px-6 rounded-lg shadow-lg hover:shadow-xl transition duration-200"
+            >Ir a Escuchar
+          </a>
+        </div>
+        <div class="lg:w-1/4 lg:flex lg:justify-end hidden">
+          <img
+            src="assets/podcast.webp"
+            alt="Podcast"
+            width="auto"
+            height="auto"
+            loading="eager"
+          />
+        </div>
       </div>
     </div>
+  </section>
+  <div class="custom-shape-divider-top-1736997818">
+    <svg
+      data-name="Layer 1"
+      xmlns="http://www.w3.org/2000/svg"
+      viewBox="0 0 1200 120"
+      preserveAspectRatio="none"
+    >
+      <path
+        d="M0,0V46.29c47.79,22.2,103.59,32.17,158,28,70.36-5.37,136.33-33.31,206.8-37.5C438.64,32.43,512.34,53.67,583,72.05c69.27,18,138.3,24.88,209.4,13.08,36.15-6,69.85-17.84,104.45-29.34C989.49,25,1113-14.29,1200,52.47V0Z"
+        opacity=".25"
+        class="shape-fill"
+      ></path>
+      <path
+        d="M0,0V15.81C13,36.92,27.64,56.86,47.69,72.05,99.41,111.27,165,111,224.58,91.58c31.15-10.15,60.09-26.07,89.67-39.8,40.92-19,84.73-46,130.83-49.67,36.26-2.85,70.9,9.42,98.6,31.56,31.77,25.39,62.32,62,103.63,73,40.44,10.79,81.35-6.69,119.13-24.28s75.16-39,116.92-43.05c59.73-5.85,113.28,22.88,168.9,38.84,30.2,8.66,59,6.17,87.09-7.5,22.43-10.89,48-26.93,60.65-49.24V0Z"
+        opacity=".5"
+        class="shape-fill"
+      ></path>
+      <path
+        d="M0,0V5.63C149.93,59,314.09,71.32,475.83,42.57c43-7.64,84.23-20.12,127.61-26.46,59-8.63,112.48,12.24,165.56,35.4C827.93,77.22,886,95.24,951.2,90c86.53-7,172.46-45.71,248.8-84.81V0Z"
+        class="shape-fill"
+      ></path>
+    </svg>
   </div>
-</section>
-<div class="custom-shape-divider-top-1736997818">
-  <svg
-    data-name="Layer 1"
-    xmlns="http://www.w3.org/2000/svg"
-    viewBox="0 0 1200 120"
-    preserveAspectRatio="none"
-  >
-    <path
-      d="M0,0V46.29c47.79,22.2,103.59,32.17,158,28,70.36-5.37,136.33-33.31,206.8-37.5C438.64,32.43,512.34,53.67,583,72.05c69.27,18,138.3,24.88,209.4,13.08,36.15-6,69.85-17.84,104.45-29.34C989.49,25,1113-14.29,1200,52.47V0Z"
-      opacity=".25"
-      class="shape-fill"
-    ></path>
-    <path
-      d="M0,0V15.81C13,36.92,27.64,56.86,47.69,72.05,99.41,111.27,165,111,224.58,91.58c31.15-10.15,60.09-26.07,89.67-39.8,40.92-19,84.73-46,130.83-49.67,36.26-2.85,70.9,9.42,98.6,31.56,31.77,25.39,62.32,62,103.63,73,40.44,10.79,81.35-6.69,119.13-24.28s75.16-39,116.92-43.05c59.73-5.85,113.28,22.88,168.9,38.84,30.2,8.66,59,6.17,87.09-7.5,22.43-10.89,48-26.93,60.65-49.24V0Z"
-      opacity=".5"
-      class="shape-fill"
-    ></path>
-    <path
-      d="M0,0V5.63C149.93,59,314.09,71.32,475.83,42.57c43-7.64,84.23-20.12,127.61-26.46,59-8.63,112.48,12.24,165.56,35.4C827.93,77.22,886,95.24,951.2,90c86.53-7,172.46-45.71,248.8-84.81V0Z"
-      class="shape-fill"
-    ></path>
-  </svg>
 </div>
 <!-- Section nuevo los lagos-->
 <section>
   <div class="py-20 bg-white">
     <div class="container mx-auto px-4 sm:px-6 lg:px-8">
       <!-- Sección de título y descripción -->
-      <div class="lg:text-center">
+      <div data-aos="zoom-in-down" class="lg:text-center">
         <h2
           class="font-heading mb-4 bg-yellow-500 inline-block px-4 py-2 rounded-lg md:w-64 md:mx-auto text-xs font-semibold tracking-widest text-black uppercase title-font"
         >
@@ -127,7 +130,7 @@
         </p>
       </div>
       <!-- Grid de características -->
-      <div class="mt-10">
+      <div data-aos="zoom-in" class="mt-10">
         <dl class="feature-grid">
           <div class="feature-item">
             <div class="feature-item-title">
