carousel, suggested suffle, clean code

--- a/src/app/v2/modules/general-search/general-search.component.html
+++ b/src/app/v2/modules/general-search/general-search.component.html
@@ -2,6 +2,8 @@
   <!-- Migas de pan (Breadcrumbs) -->
   <app-breadcrumbs [breadcrumbs]="breadcrumbs"></app-breadcrumbs>
 
+  <app-carousel-banner></app-carousel-banner>
+
   <!-- Contenido dinámico -->
   <main class="container mx-auto py-12 flex flex-col lg:flex-row">
     <div class="w-full lg:w-3/4 px-8">
