--- a/src/app/v2/modules/landing-page3/landing-page3.component.html
+++ b/src/app/v2/modules/landing-page3/landing-page3.component.html
@@ -1,4 +1,6 @@
 <app-extras type="varios11"></app-extras>
+<!-- Por ejemplo, en app.component.html -->
+
 <div class="custom-shape-divider-bottom-1737000036" style="margin-top: -60px">
   <svg
     data-name="Layer 1"
@@ -12,6 +14,17 @@
     ></path>
   </svg>
 </div>
+<!--
+<app-carousel
+  [slides]="slides"
+  [autoPlay]="true"
+  [intervalTime]="4000"
+  width="100%"
+  height="500px"
+  [transitionTime]="600"
+>
+</app-carousel>
+-->
 <!-- Contenido dinámico del sitio -->
 <section data-aos="fade-up">
   <app-title-section
