--- a/src/app/v2/modules/proyecto-plataforma/proyecto-plataforma.component.html
+++ b/src/app/v2/modules/proyecto-plataforma/proyecto-plataforma.component.html
@@ -1,5 +1,6 @@
 <!-- Migas de pan para navegación -->
 <app-breadcrumbs [breadcrumbs]="breadcrumbs"></app-breadcrumbs>
+<app-carousel-banner></app-carousel-banner>
 <main class="container mx-auto py-12 flex flex-col lg:flex-row">
   <!-- Sección de búsqueda y resultados -->
   <div class="w-full lg:w-3/4 pr8 p-8">
@@ -55,7 +56,11 @@
         </li>
       </ul>
     </section>
-    <img src="assets/image1.svg" alt="Desafíos y Brechas img Descripción" class="w-2/3" />
+    <img
+      src="assets/image1.svg"
+      alt="Desafíos y Brechas img Descripción"
+      class="w-2/3"
+    />
     <section class="my-8 text-justify bg-gray-100 p-3">
       <h2 class="text-3xl font-semibold text-gray-800">Desafíos y Brechas</h2>
       <h3 class="mt-4 text-2xl font-medium text-gray-800">Desafíos</h3>
