--- a/src/app/v2/components/footer/footer.component.html
+++ b/src/app/v2/components/footer/footer.component.html
@@ -128,9 +128,9 @@
         </p>
         <a
           href="#"
-          routerLink="/evaluaciones-madurez"
+          routerLink="{{ link }}"
           class="bg-yellow-500 text-white px-6 py-2 rounded-lg hover:bg-yellow-600 transition duration-300"
-          >Evaluar Ahora</a
+          >{{ label }}</a
         >
       </div>
     </div>
