--- a/src/app/v2/components/patrocinadores/patrocinadores.component.html
+++ b/src/app/v2/components/patrocinadores/patrocinadores.component.html
@@ -1,3 +1,16 @@
+<div class="custom-shape-divider-bottom-1737332143">
+  <svg
+    data-name="Layer 1"
+    xmlns="http://www.w3.org/2000/svg"
+    viewBox="0 0 1200 120"
+    preserveAspectRatio="none"
+  >
+    <path
+      d="M649.97 0L550.03 0 599.91 54.12 649.97 0z"
+      class="shape-fill"
+    ></path>
+  </svg>
+</div>
 <!-- Sección de patrocinadores -->
 <div class="w-full bg-gray-100 py-4">
   <div class="max-w-full px-6">
