--- a/src/app/v2/modules/podcasts/podcasts.component.html
+++ b/src/app/v2/modules/podcasts/podcasts.component.html
@@ -1,6 +1,6 @@
 <!-- Migas de pan para navegación -->
 <app-breadcrumbs [breadcrumbs]="breadcrumbs"></app-breadcrumbs>
-
+<app-carousel-banner></app-carousel-banner>
 <!-- Contenido principal -->
 <main class="container mx-auto py-12 flex flex-col lg:flex-row">
   <!-- Sección de búsqueda y resultados -->
