--- a/src/app/v2/modules/proyecto-equipo/proyecto-equipo.component.html
+++ b/src/app/v2/modules/proyecto-equipo/proyecto-equipo.component.html
@@ -1,5 +1,7 @@
 <!-- Migas de pan para navegación -->
 <app-breadcrumbs [breadcrumbs]="breadcrumbs"></app-breadcrumbs>
+
+<app-carousel-banner></app-carousel-banner>
 <!-- Contenido principal -->
 <main class="container mx-auto py-12 flex flex-col lg:flex-row">
   <!-- Sección de búsqueda y resultados -->
