webm vid reduce

--- a/src/app/v2/components/extras/extras.component.html
+++ b/src/app/v2/components/extras/extras.component.html
@@ -526,10 +526,7 @@
     loop
     class="absolute inset-0 w-full h-full object-cover"
   >
-    <source
-      src="https://videos.pexels.com/video-files/2406491/2406491-uhd_2560_1440_24fps.mp4"
-      type="video/mp4"
-    />
+    <source src="assets/videos/industry-landing2.webm" type="video/webm" />
     Tu navegador no soporta videos HTML5.
   </video>
   <!-- Overlay oscuro para mejorar la legibilidad -->
